# SuperNET

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  ConsoleApplication3.vcxproj  ConsoleApplication3.vcxproj.filters  Cross.toml  Dockerfile  Dockerfile.armv7-unknown-linux-gnueabihf  Dockerfile.clientnode  Dockerfile.dev-release  Dockerfile.parity.dev  Dockerfile.release  Dockerfile.seednode  Dockerfile.ubuntu.ci  Jenkinsfile  Makefile  MyTemplate.vstemplate  README.md  README_decker.md  ReadMe.txt  appveyor.yml  azure-pipelines-build-stage-job.yml  azure-pipelines-job.yml  azure-pipelines-lint-stage-job.yml  azure-pipelines-release-stage-job.yml  azure-pipelines-wasm-stage-job.yml  azure-pipelines.yml  build.rs  build_testnet  build_testnet_inverted  chrome_extension.sh  deny.toml  docker-compose.debug.yml  docker-compose.yml  iguana.sln  (+47 more)
crypto777/: CMakeLists.txt  Makefile  OS_nonportable.c  OS_portable.c  OS_portable.h  OS_time.c  SaM.c  bitcoind_RPC.c  cJSON.c  ccgi.c  crypto777.sources  curve25519-donna.c  curve25519.c  hmac_sha512.c  i  iguana_OS.c  iguana_secp.c  iguana_serdes.c  iguana_utils.c  inet.c  libgfshare.c  libsecp256k1.notyet  m_LP  m_LP_StaticNanoMsg  m_LP_win_cross  m_android  m_clean  m_ios  m_js  m_onetime_android  m_osx  m_osx_release  m_unix  m_win32  m_win64  make_android  make_ios  make_unix  make_win32  make_win64  (+7 more)
crypto777/hmac/: hash_memory.c  hmac_done.c  hmac_file.c  hmac_init.c  hmac_memory.c  hmac_memory_multi.c  hmac_process.c  hmac_test.c  md2.c  md4.c  md5.c  rmd128.c  rmd160.c  rmd256.c  rmd320.c  sha1.c  sha224.c  sha256.c  sha384.c  sha512.c  tiger.c  tomcrypt.h  tomcrypt_argchk.h  tomcrypt_cfg.h  tomcrypt_custom.h  tomcrypt_hash.h  tomcrypt_mac.h  tomcrypt_macros.h  tomcrypt_misc.h  whirl.c  whirltab.c
crypto777/jpeg/: CMakeLists.txt  Makefile  jconfig.h  jmemsys.h
crypto777/jpeg/misc/: jmemnobs.c  test.c
crypto777/jpeg/osx/: jmemmac.c
crypto777/jpeg/unix/: jmemname.c
crypto777/jpeg/win/: jmemdos.c
crypto777/nanosrc/: nn.h  nn_config.h  transport.h
crypto777/nanosrc/aio/: ctx.c  fsm.c  poller.c  poller_epoll.h  pool.c  usock.c  usock_posix.c  usock_posix.c_dev  usock_posix.h  usock_win.c  worker.c  worker_posix.c
crypto777/nanosrc/core/: ep.c  ep.h  global.c  pipe.c  sock.c  sockbase.c
crypto777/nanosrc/devices/: device.c  device.h  tcpmuxd.c
crypto777/nanosrc/tests/: block.c  bus.c  cmsg.c  device.c  domain.c  emfile.c  hash.c  inproc.c  inproc_shutdown.c  iovec.c  ipc.c  ipc_stress.c  list.c  msg.c  pair.c  pipeline.c  poll.c  prio.c  reqrep.c  separation.c  shutdown.c  symbol.c  tcp.c  tcpmux.c  term.c  testutil.h  timeo.c  trie.c  ws.c  zerocopy.c
crypto777/nanosrc/utils/: clock.c  efd.c  efd.h  efd_eventfd.c  efd_pipe.c  efd_socketpair.c  efd_win.c  err.c  err.h  glock.c  mutex.h  queue.c  sem.c  sem.h  thread.c  thread_posix.c  thread_posix.h  thread_win.c  win.h
crypto777/pnacl/Release/: OS_nonportable.deps  OS_portable.deps  OS_time.deps  SaM.deps  bitcoind_RPC.deps  cJSON.deps  curve25519-donna.deps  curve25519.deps  hmac_sha512.deps  iguana_OS.deps  iguana_serdes.deps  iguana_utils.deps  inet.deps  nacl_io.stamp  ramcoder.deps
crypto777/secp256k1/: libsecp256k1-config.h  num.h  num_gmp.h  num_gmp_impl.h  scalar.h  secp256k1.c
crypto777/tools/: chrome.localhost  chrome.localhost.bat  common.mk
etomiclibrs/: Cargo.toml  build.rs  etomiclib.rs
iguana/exchanges/: .Makefile.swp  CMakeLists.txt  DEXstats.h  LP_NXT.c  LP_RTmetrics.c  LP_bitcoin.c  LP_cache.c  LP_coins.c  LP_commands.c  LP_etomic.c  LP_etomic.h  LP_forwarding.c  LP_include.h  LP_instantdex.c  LP_messages.c  LP_mmjson.c  LP_mpnet.c  LP_nativeDEX.c  LP_network.c  LP_ordermatch.c  LP_peers.c  LP_portfolio.c  LP_prices.c  LP_privkey.c  LP_quotes.c  LP_remember.c  LP_rpc.c  LP_scan.c  LP_secp.c  LP_signatures.c  LP_socket.c  LP_statemachine.c  LP_stats.c  LP_swap.c  LP_tradebots.c  LP_transaction.c  LP_unspents.c  LP_utxo.c  LP_utxos.c  LP_zeroconf.c  (+191 more)
iguana/exchanges/etomicswap/: CMakeLists.txt  Cargo.toml  alice.c  bob.c  etomiccurl.c  etomiccurl.h  etomiccurl.rs  (+3 more)
mm2src/coins/: Cargo.toml  build.rs  coin_balance.rs  coins.rs  coins_tests.rs  enable_v2.rs  eth.rs  hd_pubkey.rs  hd_wallet.rs  init_create_account.rs  init_withdraw.rs  lightning.rs  lp_coins.rs  my_tx_history_v2.rs  qrc20.rs  solana.rs  sql_tx_history_storage.rs  test_coin.rs  tx_history_db.rs  utxo.rs  z_coin.rs
mm2src/coins_activation/: Cargo.toml
mm2src/common/: Cargo.toml  big_int_str.rs  build.rs  common.rs  crash_reports.rs  custom_futures.rs  custom_iter.rs  dht.cc  duplex_mutex.rs  event_dispatcher.rs  executor.rs  file_lock.rs  for_c.rs  for_tests.rs  grpc_web.rs  header.rs  iguana_utils.rs  ip_addr.rs  jsonrpc_client.rs  lift_body.rs  log.rs  lp_privkey.rs  mm_ctx.rs  mm_metrics.rs  mm_number.rs  mm_rpc_protocol.rs  privkey.rs  seri.rs  time_cache.rs  wasm.rs  wasm_indexed_db.rs  wasm_rpc.rs  wio.rs
mm2src/crypto/: Cargo.toml
mm2src/db_common/: Cargo.toml
mm2src/docker_tests/: Cargo.toml  docker_ordermatch_tests.rs  docker_tests_common.rs  qrc20_tests.rs  slp_tests.rs  solana_tests.rs  swaps_confs_settings_sync_tests.rs  swaps_file_lock_tests.rs
mm2src/etomic/: Cargo.toml  build.rs  etomic.rs
mm2src/gossipsub/: Cargo.toml  build.rs
mm2src/helpers/: Cargo.toml  build.rs  helpers.rs  iguana_utils.rs  log.rs  seh.c  ser.rs
mm2src/hw_common/: Cargo.toml
mm2src/ledger/: Cargo.toml
mm2src/mm2_core/: Cargo.toml
mm2src/mm2_db/: Cargo.toml
mm2src/mm2_err_handle/: Cargo.toml
mm2src/mm2_io/: Cargo.toml
mm2src/mm2_libp2p/: Cargo.toml  build.rs
mm2src/mm2_main/: Cargo.toml  README.md  build.rs
mm2src/mm2_net/: Cargo.toml
mm2src/mm2_number/: Cargo.toml
mm2src/mm2_rpc/: Cargo.toml
mm2src/mm2_test_helpers/: Cargo.toml
mm2src/peers/: Cargo.toml  executor.rs  http_fallback.rs  peers.rs  peers_tests.rs  tests.rs
mm2src/portfolio/: Cargo.toml  portfolio.rs  portfolio_tests.rs  prices.rs
mm2src/rpc_task/: Cargo.toml
mm2src/trezor/: .gitignore  Cargo.toml  README.md  build.rs
(+2403 files in other folders)
