cmake_minimum_required(VERSION 3.5.1)

project(SuperNET)
set(DEPS_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/install)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_EXTENSIONS Off)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
if(DEFINED ENV{CMAKE_FORCE_C_COMPILER})
    set(CMAKE_C_COMPILER $ENV{CMAKE_FORCE_C_COMPILER})
endif()
if(DEFINED ENV{CMAKE_FORCE_CXX_COMPILER})
    set(CMAKE_CXX_COMPILER $ENV{CMAKE_FORCE_CXX_COMPILER})
endif()
include_directories("${CMAKE_SOURCE_DIR}")
add_subdirectory(iguana/exchanges)
