# Support for split-debuginfo [should eventually](https://github.com/rust-lang/rust/issues/34651) land,
# hopefully giving us an out-of-the-box way to separate the code from the debugging information.
# We should use the "objcopy --only-keep-debug" and "add-symbol-file" meanwhile
# and separating stack tracing into raw trace and symbolication parts.

[package]
name = "mm2"
version = "0.1.0"
edition = "2018"
default-run = "mm2"

[features]
# Deprecated
native = []
zhtlc = ["coins/zhtlc"]

[[bin]]
name = "mm2"
path = "mm2src/mm2_bin.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "docker_tests"
path = "mm2src/docker_tests.rs"

[lib]
name = "mm2"
path = "mm2src/mm2_lib.rs"
crate-type = ["cdylib", "staticlib"]
test = false
doctest = false
bench = false

[profile.release]
# Due to the "overrides" only affects our workspace crates, as intended.
debug = true
debug-assertions = false
# For better or worse, might affect the stack traces in our portion of the code.
#opt-level = 1

[profile.release.overrides."*"]
# Turns debugging symbols off for the out-of-workspace dependencies.
debug = false

[dependencies]
async-std = { version = "1.5", features = ["unstable"] }
async-trait = "0.1"
atomic = "0.4"
bigdecimal = { version = "0.1", features = ["serde"] }
bitcrypto = { path = "mm2src/mm2_bitcoin/crypto" }
blake2 = "0.9.1"
bytes = "0.4"
chain = { path = "mm2src/mm2_bitcoin/chain" }
coins = { path = "mm2src/coins" }
common = { path = "mm2src/common" }
crc = "1.8"
crc32fast = { version = "1.2", features = ["std", "nightly"] }
crossbeam = "0.7"
derive_more = "0.99"
either = "1.6"
ethereum-types = { version = "0.4", default-features = false, features = ["std", "serialize"] }
enum-primitive-derive = "0.1"
fomat-macros = "0.2"
futures01 = { version = "0.1", package = "futures" }
futures-cpupool = "0.1"
futures = { version = "0.3.1", package = "futures", features = ["compat", "async-await"] }
gstuff = { version = "0.6", features = ["nightly"] }
hash256-std-hasher = "0.15.2"
hash-db = "0.15.2"
hex = "0.3.2"
hex-literal = "0.3.1"
http = "0.2"
itertools = "0.9"
keys = { path = "mm2src/mm2_bitcoin/keys" }
lazy_static = "1.3"
libc = "0.2"
metrics = "0.12"
mm2-libp2p = { path = "mm2src/mm2_libp2p" }
num-rational = { version = "0.2", features = ["serde", "bigint", "bigint-std"] }
num-traits = "0.2"
rpc = { path = "mm2src/mm2_bitcoin/rpc" }
parking_lot = { version = "0.11", features = ["nightly"] }
parity-util-mem = "0.7"
# AP: portfolio RPCs are not documented and not used as of now
# so the crate is disabled to speed up the entire removal of C code
# portfolio = { path = "mm2src/portfolio" }
primitives = { path = "mm2src/mm2_bitcoin/primitives" }
rand = { version = "0.7", features = ["std", "small_rng"] }
rmp-serde = "0.14.3"
# TODO: Reduce the size of regex by disabling the features we don't use.
# cf. https://github.com/rust-lang/regex/issues/583
regex = "1"
script = { path = "mm2src/mm2_bitcoin/script" }
serde = "1.0"
serde_bencode = "0.2"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_derive = "1.0"
ser_error = { path = "mm2src/derives/ser_error" }
ser_error_derive = { path = "mm2src/derives/ser_error_derive" }
serialization = { path = "mm2src/mm2_bitcoin/serialization" }
serialization_derive = { path = "mm2src/mm2_bitcoin/serialization_derive" }
sp-trie = "2.0.0"
sql-builder = "3.1.1"

# Pin `term` to 0.5.1 because `dirs` is not portable, cf.
# https://github.com/Stebalien/term/commit/84cfdb51775b327fedf21784749d862fdffa10b4#diff-80398c5faae3c069e4e6aa2ed11b28c0
term = "=0.5.1"

trie-db = "0.22.1"
trie-root = "0.16.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
wasm-timer = "0.2.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3.27" }
wasm-bindgen = { version = "0.2.50", features = ["serde-serialize", "nightly"] }
wasm-bindgen-futures = { version = "0.4.1" }
wasm-bindgen-test = { version = "0.3.1" }
web-sys = { version = "0.3.4", features = ["console"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = { version = "1" }
hyper = { version = "0.13" }
tokio = { version = "0.2.22", features = ["io-util", "rt-threaded", "stream", "tcp"] }

[dev-dependencies]
bitcoin-cash-slp = "0.3.1"
libsecp256k1 = "0.2.2"
mocktopus = "0.7.0"
rand4 = { version = "0.4", package = "rand" }
testcontainers = { git = "https://github.com/artemii235/testcontainers-rs.git" }
winapi = "0.3"

[build-dependencies]
chrono = "0.4"
gstuff = { version = "0.6", features = ["nightly", "term"] }
regex = "1"

[workspace]
members = [
    "mm2src/coins",
    "mm2src/floodsub",
    "mm2src/mm2_bitcoin/crypto",
    "mm2src/mm2_bitcoin/chain",
    "mm2src/mm2_bitcoin/keys",
    "mm2src/mm2_bitcoin/rpc",
    "mm2src/mm2_bitcoin/primitives",
    "mm2src/mm2_bitcoin/script",
    "mm2src/mm2_bitcoin/serialization",
    "mm2src/mm2_bitcoin/serialization_derive",
    "mm2src/mm2_libp2p",
    "mm2src/gossipsub",
    "mm2src/derives/ser_error",
    "mm2src/derives/ser_error_derive",
]

# The backtrace disables build.define("HAVE_DL_ITERATE_PHDR", "1"); for android which results in "unknown" function
# names being printed, but dl_iterate_phdr is present since API version 21 https://github.com/rust-lang/rust/issues/17520#issuecomment-344885468
# We're using 21 version for Android build so we're fine to use the patch.
# Consider removing once this issue is solved and fix applied to upstream repository
# https://github.com/rust-lang/backtrace-rs/issues/227
[patch.crates-io]
backtrace = { git = "https://github.com/artemii235/backtrace-rs.git" }
backtrace-sys = { git = "https://github.com/artemii235/backtrace-rs.git" }
num-rational = { git = "https://github.com/artemii235/num-rational.git" }
