[workspace]
members = [
    "mm2src/coins",
    "mm2src/common/shared_ref_counter",
    "mm2src/coins/lightning_persister",
    "mm2src/coins/lightning_background_processor",
    "mm2src/coins/utxo_signer",
    "mm2src/coins_activation",
    "mm2src/crypto",
    "mm2src/db_common",
    "mm2src/derives/ser_error",
    "mm2src/derives/ser_error_derive",
    "mm2src/floodsub",
    "mm2src/gossipsub",
    "mm2src/hw_common",
    "mm2src/mm2_bitcoin/crypto",
    "mm2src/mm2_bitcoin/chain",
    "mm2src/mm2_bitcoin/keys",
    "mm2src/mm2_bitcoin/rpc",
    "mm2src/mm2_bitcoin/primitives",
    "mm2src/mm2_bitcoin/script",
    "mm2src/mm2_bitcoin/serialization",
    "mm2src/mm2_bitcoin/serialization_derive",
    "mm2src/mm2_bitcoin/test_helpers",
    "mm2src/mm2_core",
    "mm2src/mm2_db",
    "mm2src/mm2_err_handle",
    "mm2src/mm2_test_helpers",
    "mm2src/mm2_libp2p",
    "mm2src/mm2_main",
    "mm2src/mm2_net",
    "mm2src/mm2_io",
    "mm2src/mm2_rpc",
    "mm2src/rpc_task",
    "mm2src/trezor",
]

# https://doc.rust-lang.org/beta/cargo/reference/features.html#feature-resolver-version-2
resolver = "2"

[profile.release]
# Due to the "overrides" only affects our workspace crates, as intended.
debug = true
debug-assertions = false
# For better or worse, might affect the stack traces in our portion of the code.
#opt-level = 1

[profile.test]
# required to avoid a long running process of librustcash additional chain validation that is enabled with debug assertions
debug-assertions = false

[profile.release.overrides."*"]
# Turns debugging symbols off for the out-of-workspace dependencies.
debug = false

# The backtrace disables build.define("HAVE_DL_ITERATE_PHDR", "1"); for android which results in "unknown" function
# names being printed, but dl_iterate_phdr is present since API version 21 https://github.com/rust-lang/rust/issues/17520#issuecomment-344885468
# We're using 21 version for Android build so we're fine to use the patch.
# Consider removing once this issue is solved and fix applied to upstream repository
# https://github.com/rust-lang/backtrace-rs/issues/227
[patch.crates-io]
backtrace = { git = "https://github.com/artemii235/backtrace-rs.git" }
backtrace-sys = { git = "https://github.com/artemii235/backtrace-rs.git" }
