file(GLOB sources "*.c")
file(GLOB headers "*.h")
add_library(libcrypto777 STATIC ${sources} ${headers})
if(WIN32)
add_definitions(-DNATIVE_WINDOWS)
add_definitions(-DIGUANA_LOG2PACKETSIZE=20)
add_definitions(-DIGUANA_MAXPACKETSIZE=1572864)
include_directories("${CMAKE_SOURCE_DIR}/includes")
endif()
