[package]
name = "etomiclibrs"
version = "0.1.0"
authors = ["Artem Pikulin <ortgma@gmail.com>"]

[lib]
name = "etomiclibrs"
path = "etomiclib.rs"

[dependencies]
ethcore-transaction = { git = "https://github.com/paritytech/parity.git" }
ethkey = { git = "https://github.com/paritytech/parity.git" }
rlp = { git = "https://github.com/paritytech/parity-common" }
ethereum-types = "0.3.1"
web3 = { git = "https://github.com/artemii235/rust-web3" }
ethabi = { git = "https://github.com/artemii235/ethabi" }
hex = "0.3.2"
regex = "1"
libc = "0.2.42"
unwrap = "1.2.0"

[build-dependencies]
bindgen = "0.38"
cc = "1.0.18"
duct = "0.11.0"
gstuff = { git = "https://github.com/ArtemGr/gstuff.rs" }
itertools = "0.7.8"
num_cpus = "1.8.0"
unwrap = "1.2.1"
winapi = "0.3.5"
