[package]
name = "coins"
version = "0.1.0"
edition = "2018"

[features]
zhtlc = ["rusqlite", "zcash_client_backend", "zcash_primitives", "zcash_proofs"]

[lib]
name = "coins"
path = "lp_coins.rs"
doctest = false

[dependencies]
async-std = { version = "1.5", features = ["unstable"] }
async-trait = "0.1"
base64 = "0.10.0"
bigdecimal = { version = "0.1.0", features = ["serde"] }
bip32 = { version = "0.2.2", default-features = false, features = ["alloc", "secp256k1-ffi"] }
bitcoin = "0.27.1"
bitcoin_hashes = "0.10.0"
bitcrypto = { path = "../mm2_bitcoin/crypto" }
byteorder = "1.3"
bytes = "0.4"
cfg-if = "1.0"
chain = { path = "../mm2_bitcoin/chain" }
common = { path = "../common" }
crypto = { path = "../crypto" }
db_common = { path = "../db_common" }
derive_more = "0.99"
ethabi = { git = "https://github.com/artemii235/ethabi" }
ethcore-transaction = { git = "https://github.com/artemii235/parity-ethereum.git" }
ethereum-types = { version = "0.4", default-features = false, features = ["std", "serialize"] }
ethkey = { git = "https://github.com/artemii235/parity-ethereum.git" }
# Waiting for https://github.com/rust-lang/rust/issues/54725 to use on Stable.
#enum_dispatch = "0.1"
fomat-macros = "0.2"
futures01 = { version = "0.1", package = "futures" }
# using select macro requires the crate to be named futures, compilation failed with futures03 name
futures = { version = "0.3", package = "futures", features = ["compat", "async-await"] }
gstuff = { version = "0.7", features = ["nightly"] }
hex = "0.4.2"
http = "0.2"
itertools = "0.9"
jsonrpc-core = "8.0.1"
keys = { path = "../mm2_bitcoin/keys" }
lazy_static = "1.4"
libc = "0.2"
lightning = "0.0.104"
lightning-background-processor = { path = "lightning_background_processor" }
lightning-invoice = "0.12.0"
metrics = "0.12"
mocktopus = "0.7.0"
num-traits = "0.2"
parking_lot = { version = "0.11", features = ["nightly"] }
primitives = { path = "../mm2_bitcoin/primitives" }
prost = "0.8"
rand = { version = "0.7", features = ["std", "small_rng"] }
rlp = { git = "https://github.com/artemii235/parity-common" }
rmp-serde = "0.14.3"
rpc = { path = "../mm2_bitcoin/rpc" }
rpc_task = { path = "../rpc_task" }
script = { path = "../mm2_bitcoin/script" }
secp256k1 = { version = "0.20" }
ser_error = { path = "../derives/ser_error" }
ser_error_derive = { path = "../derives/ser_error_derive" }
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order", "raw_value"] }
serialization = { path = "../mm2_bitcoin/serialization" }
serialization_derive = { path = "../mm2_bitcoin/serialization_derive" }
sha2 = "0.8"
sha3 = "0.8"
utxo_signer = { path = "utxo_signer" }
# One of web3 dependencies is the old `tokio-uds 0.1.7` which fails cross-compiling to ARM.
# We don't need the default web3 features at all since we added our own web3 transport using shared HYPER instance.
web3 = { git = "https://github.com/artemii235/rust-web3", default-features = false }
winapi = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3.27" }
wasm-bindgen = { version = "0.2.50", features = ["serde-serialize", "nightly"] }
wasm-bindgen-futures = { version = "0.4.1" }
wasm-bindgen-test = { version = "0.3.2" }
web-sys = { version = "0.3.55", features = ["console", "Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = { version = "1" }
lightning-persister = { path = "lightning_persister" }
lightning-net-tokio = "0.0.104"
rusqlite = { version = "0.24.2", features = ["bundled"], optional = true }
rust-ini = { version = "0.13" }
rustls = { version = "0.19", features = ["dangerous_configuration"] }
tokio = { version = "1.7" }
tokio-rustls = { version = "0.22.0" }
webpki-roots = { version = "0.19.0" }
zcash_client_backend = { git = "https://github.com/KomodoPlatform/librustzcash.git", optional = true }
zcash_primitives = { features = ["transparent-inputs"], git = "https://github.com/KomodoPlatform/librustzcash.git", optional = true }
zcash_proofs = { features = ["bundled-prover"], git = "https://github.com/KomodoPlatform/librustzcash.git", optional = true }

[build-dependencies]
prost-build = "0.8"
