[package]
name = "coins"
version = "0.1.0"
edition = "2018"

[features]
zhtlc-native-tests = []

[lib]
name = "coins"
path = "lp_coins.rs"
doctest = false

[dependencies]
async-std = { version = "1.5", features = ["unstable"] }
async-trait = "0.1.52"
base64 = "0.10.0"
base58 = "0.2.0"
bigdecimal = { version = "0.3", features = ["serde"] }
bip32 = { version = "0.2.2", default-features = false, features = ["alloc", "secp256k1-ffi"] }
bitcoin = "0.27.1"
bitcoin_hashes = "0.10.0"
bitcrypto = { path = "../mm2_bitcoin/crypto" }
bincode = "1.3.3"
byteorder = "1.3"
bytes = "0.4"
cfg-if = "1.0"
chain = { path = "../mm2_bitcoin/chain" }
common = { path = "../common" }
crypto = { path = "../crypto" }
db_common = { path = "../db_common" }
derive_more = "0.99"
ed25519-dalek = "1.0.1"
ed25519-dalek-bip32 = "0.2.0"
ethabi = { git = "https://github.com/artemii235/ethabi" }
ethcore-transaction = { git = "https://github.com/artemii235/parity-ethereum.git" }
ethereum-types = { version = "0.4", default-features = false, features = ["std", "serialize"] }
ethkey = { git = "https://github.com/artemii235/parity-ethereum.git" }
# Waiting for https://github.com/rust-lang/rust/issues/54725 to use on Stable.
#enum_dispatch = "0.1"
fomat-macros = "0.2"
futures01 = { version = "0.1", package = "futures" }
# using select macro requires the crate to be named futures, compilation failed with futures03 name
futures = { version = "0.3", package = "futures", features = ["compat", "async-await"] }
gstuff = { version = "0.7", features = ["nightly"] }
hex = "0.4.2"
http = "0.2"
itertools = { version = "0.10", features = ["use_std"] }
jsonrpc-core = "8.0.1"
keys = { path = "../mm2_bitcoin/keys" }
lazy_static = "1.4"
libc = "0.2"
lightning = { git = "https://github.com/shamardy/rust-lightning", branch = "0.0.106" }
lightning-background-processor = { path = "lightning_background_processor" }
lightning-invoice = { git = "https://github.com/shamardy/rust-lightning", branch = "0.0.106" }
metrics = "0.12"
mm2_core = { path = "../mm2_core" }
mm2_err_handle = { path = "../mm2_err_handle" }
mm2_io = { path = "../mm2_io" }
mm2_net = { path = "../mm2_net" }
mocktopus = "0.7.0"
num-traits = "0.2"
parking_lot = { version = "0.12.0", features = ["nightly"] }
primitives = { path = "../mm2_bitcoin/primitives" }
prost = "0.8"
rand = { version = "0.7", features = ["std", "small_rng"] }
rlp = { git = "https://github.com/artemii235/parity-common" }
rmp-serde = "0.14.3"
rpc = { path = "../mm2_bitcoin/rpc" }
rpc_task = { path = "../rpc_task" }
script = { path = "../mm2_bitcoin/script" }
secp256k1 = { version = "0.20" }
ser_error = { path = "../derives/ser_error" }
ser_error_derive = { path = "../derives/ser_error_derive" }
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order", "raw_value"] }
serialization = { path = "../mm2_bitcoin/serialization" }
serialization_derive = { path = "../mm2_bitcoin/serialization_derive" }
spv_validation = { path = "../mm2_bitcoin/spv_validation" }
sha2 = "0.9"
sha3 = "0.9"
utxo_signer = { path = "utxo_signer" }
tiny-bip39 = "0.8.0"
# One of web3 dependencies is the old `tokio-uds 0.1.7` which fails cross-compiling to ARM.
# We don't need the default web3 features at all since we added our own web3 transport using shared HYPER instance.
web3 = { git = "https://github.com/artemii235/rust-web3", default-features = false }
zbase32 = "0.1.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3.27" }
mm2_db = { path = "../mm2_db" }
mm2_test_helpers = { path = "../mm2_test_helpers" }
wasm-bindgen = { version = "0.2.50", features = ["nightly"] }
wasm-bindgen-futures = { version = "0.4.1" }
wasm-bindgen-test = { version = "0.3.2" }
web-sys = { version = "0.3.55", features = ["console", "Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = { version = "1" }
lightning-persister = { path = "lightning_persister" }
lightning-net-tokio = { git = "https://github.com/shamardy/rust-lightning", branch = "0.0.106" }
rust-ini = { version = "0.13" }
rustls = { version = "0.20", features = ["dangerous_configuration"] }
tokio = { version = "1.7" }
tokio-rustls = { version = "0.23" }
tonic = { version = "0.5.2", features = ["tls", "compression"] }
webpki-roots = { version = "0.22" }
solana-client = { version = "1", default-features = false }
solana-sdk = { version = "1", default-features = false }
solana-transaction-status = "1"
spl-token = { version = "3" }
spl-associated-token-account = "1"
zcash_client_backend = { git = "https://github.com/KomodoPlatform/librustzcash.git" }
zcash_primitives = { features = ["transparent-inputs"], git = "https://github.com/KomodoPlatform/librustzcash.git" }
zcash_proofs = { git = "https://github.com/KomodoPlatform/librustzcash.git" }

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[dev-dependencies]
mm2_test_helpers = { path = "../mm2_test_helpers" }

[build-dependencies]
prost-build = { version = "0.10.3", default-features = false }
tonic-build = { version = "0.5.2", features = ["prost", "compression"] }
