[package]
name = "coins_activation"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
coins = { path = "../coins" }
common = { path = "../common" }
derive_more = "0.99"
hex = "0.4.2"
rpc = { path = "../mm2_bitcoin/rpc" }
ser_error = { path = "../derives/ser_error" }
ser_error_derive = { path = "../derives/ser_error_derive" }
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order", "raw_value"] }