[package]
name = "common"
version = "0.1.0"
links = "marketmaker-mainnet-lib"
edition = "2018"

[lib]
name = "common"
path = "common.rs"
doctest = false

[dependencies]
arrayref = "0.3"
async-std = { version = "1.5", features = ["unstable"] }
async-trait = "0.1"
backtrace = "0.3"
base64 = "0.10.0"
bigdecimal = { version = "0.1", features = ["serde"] }
bitcrypto = { path = "../mm2_bitcoin/crypto" }
bytes = "1.1"
cfg-if = "1.0"
crossbeam = "0.7"
derive_more = "0.99"
findshlibs = "0.5"
fnv = "1.0.6"
fomat-macros = "0.2"
futures01 = { version = "0.1", package = "futures" }
futures = { version = "0.3", package = "futures", features = ["compat", "async-await", "thread-pool"] }
futures-cpupool = "0.1"
hex = "0.3.2"
http = "0.2"
http-body = "0.1"
itertools = "0.8"
keys = { path = "../mm2_bitcoin/keys" }
lazy_static = "1.4"
lightning = "0.0.101"
log = "0.4.8"
num-bigint = { version = "0.2", features = ["serde", "std"] }
num-rational = { version = "0.2", features = ["serde", "bigint", "bigint-std"] }
num-traits = "0.2"
parking_lot = { version = "0.11", features = ["nightly"] }
parking_lot_core = { version = "0.6", features = ["nightly"] }
paste = "1.0"
primitives = { path = "../mm2_bitcoin/primitives" }
prost = "0.8"
rand = { version = "0.7", features = ["std", "small_rng", "wasm-bindgen"] }
regex = "1"
serde = "1"
serde_bytes = "0.11"
serde_derive = "1"
serde_json = { version = "1.0", features = ["raw_value", "preserve_order"] }
serde_repr = "0.1.6"
ser_error = { path = "../derives/ser_error" }
ser_error_derive = { path = "../derives/ser_error_derive" }
uuid = { version = "0.7", features = ["serde", "v4"] }
wasm-timer = "0.2.4"
winapi = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4", features = ["wasmbind"] }
getrandom = { version = "0.2", features = ["js"] } # see https://docs.rs/getrandom/0.2.0/getrandom/#webassembly-support
gstuff = { version = "0.7", features = ["nightly"] }
indexmap = "=1.6.0" # see https://github.com/KomodoPlatform/atomicDEX-API/issues/1042
js-sys = "0.3.27"
serde_bencode = "0.2"
wasm-bindgen = { version = "0.2.50", features = ["serde-serialize", "nightly"] }
wasm-bindgen-futures = "0.4.21"
wasm-bindgen-test = { version = "0.3.2" }
web-sys = { version = "0.3.4", features = ["console", "CloseEvent", "DomException", "ErrorEvent", "IdbDatabase", "IdbCursor", "IdbCursorWithValue", "IdbFactory", "IdbIndex", "IdbIndexParameters", "IdbObjectStore", "IdbObjectStoreParameters", "IdbOpenDbRequest", "IdbKeyRange", "IdbTransaction", "IdbTransactionMode", "IdbVersionChangeEvent", "MessageEvent", "WebSocket"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1.0"
chrono = "0.4"
crossterm = "0.20"
gstuff = { version = "0.7", features = ["crossterm", "nightly"] }
hdrhistogram = { version = "7.0", default-features = false, features = ["sync"] }
hyper = { version = "0.14.11", features = ["client", "http2", "server", "tcp"] }
# using webpki-tokio to avoid rejecting valid certificates
# got "invalid certificate: UnknownIssuer" for https://ropsten.infura.io on iOS using default-features
hyper-rustls = { version = "0.22", default-features = false, features = ["webpki-tokio"] }
libc = { version = "0.2" }
lightning-background-processor = "0.0.101"
log4rs = { version = "1.0" }
metrics = { version = "0.12" }
metrics-runtime = { version = "0.13", default-features = false, features = ["metrics-observer-prometheus"] }
metrics-core = { version = "0.5" }
metrics-util = { version = "0.3" }
rusqlite = { version = "0.24.2", features = ["bundled"] }
tokio = { version = "1.7", features = ["io-util", "rt-multi-thread", "net"] }

[build-dependencies]
cc = "1.0"
fomat-macros = "0.3"
gstuff = { version = "0.7", features = ["nightly"] }
